--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
+* {margin: 0px; padding: 0px;}
+
 body {
   font-family: "Open Sans", sans-serif;
+  background: #ebe9e9;
 }
+
+header {width: 100%; height: 70px; background: #FFF;}
+header .logo {text-decoration: none;}
+header .logo img{width: 45px;}
+header .logo span{color: #292929; font-weight: 800; font-size: 24px;}
+
+header button.rounded-circle {min-width: 40px !important; width: 40px !important; height: 40px !important; background: #f0f5ff !important; color: #292929}
+header button.rounded-circle svg {color: #292929; font-size: 28px !important;}
