--- a/src/App.css
+++ b/src/App.css
@@ -12,5 +12,23 @@ header .logo {text-decoration: none;}
 header .logo img{width: 45px;}
 header .logo span{color: #292929; font-weight: 800; font-size: 24px;}
 
-header button.rounded-circle {min-width: 40px !important; width: 40px !important; height: 40px !important; background: #f0f5ff !important; color: #292929}
+header button.rounded-circle {min-width: 40px !important; width: 40px !important; height: 40px !important; background: #f0f5ff !important; color: #0858f7}
 header button.rounded-circle svg {color: #292929; font-size: 28px !important;}
+
+header button.rounded-circle:hover svg {color: #0858f7 !important; transition: all 0 2s ease-in-out;}
+
+.searchBox {width: 400px; height: 40px; background: #f0f5ff; border-radius: 6px; padding: 3px 15px;}
+.searchBox input {background: transparent; border: 0px; outline: none; padding-left: 0px; font-size: 14px; color: #292929}
+.searchBox input::-webkit-input-placeholder {color: rgba(0, 0, 0, 0.6)}
+.searchBox svg {font-size: 18px; color: #292929}
+
+.myAcc {text-align: left !important; color: #0858f7 !important; text-transform: capitalize !important;}
+.myAcc .userImg {display: flex; align-items: center; justify-content: center;
+  overflow: hidden; width: 40px; height: 40px; border: 1px solid #0858f7; padding: 3px; border-radius: 100%;}
+.myAcc .userImg .rounded-circle {display: flex; align-items: center; justify-content: center;
+  overflow: hidden; width: 100%px; height: 100%px; cursor: pointer; position: relative;}
+.myAcc .userImg .rounded-circle img {object-fit: cover; width:100%; height: 100%}
+
+.myAcc .userInfo {padding-left: 10px;}
+.myAcc .userInfo h4 {font-size: 15px; font-weight: 600; margin-bottom: 0px; color: #292929;}
+.myAcc .userInfo p {margin-top: 0px; font-size: 12px; color: #000; opacity: 0.7;}
