--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,11 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .searchBox svg {font-size: 18px; color: #292929}
 
 .myAcc {text-align: left !important; color: #0858f7 !important; text-transform: capitalize !important;}
-.myAcc .userImg {display: flex; align-items: center; justify-content: center;
+.userImg {display: flex; align-items: center; justify-content: center;
   overflow: hidden; width: 40px; height: 40px; border: 1px solid #0858f7; padding: 3px; border-radius: 100%;}
-.myAcc .userImg .rounded-circle {display: flex; align-items: center; justify-content: center;
+.userImg .rounded-circle {display: flex; align-items: center; justify-content: center;
   overflow: hidden; width: 100%px; height: 100%px; cursor: pointer; position: relative;}
-.myAcc .userImg .rounded-circle img {object-fit: cover; width:100%; height: 100%}
+.userImg .rounded-circle img {object-fit: cover; width:100%; height: 100%}
 
 .myAcc .userInfo {padding-left: 10px;}
 .myAcc .userInfo h4 {font-size: 15px; font-weight: 600; margin-bottom: 0px; color: #292929;}
@@ -37,3 +37,5 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 #account-menu li svg {font-size: 20px !important;}
 
 #notifications .MuiPaper-elevation {right: 10% !important; left: auto !important; top: 12% !important; width: 300px !important;}
+
+.dropdown_list h4 {font-size: 20px; font-weight: 600;}
