--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@ body {
   background: #ebe9e9;
 }
 
+::-webkit-scrollbar {width: 5px !important; height: 5px !important}
+::-webkit-scrollbar-thumb {background: #CCC !important}
+
 header {width: 100%; height: 70px; background: #FFF;}
 header .logo {text-decoration: none;}
 header .logo img{width: 45px;}
@@ -36,6 +39,15 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 #account-menu li {font-size: 14px !important; padding: 12px 15px !important;}
 #account-menu li svg {font-size: 20px !important;}
 
-#notifications .MuiPaper-elevation {right: 10% !important; left: auto !important; top: 12% !important; width: 300px !important;}
+#notifications .MuiPaper-elevation {right: 12% !important; left: auto !important; top: 8% !important; width: 300px !important;}
 
-.dropdown_list h4 {font-size: 20px; font-weight: 600;}
+.dropdown_list .head {padding: 10px 0px;}
+.dropdown_list .head h4 {font-size: 17px; font-weight: 600;}
+.dropdown_list li.MuiButtonBase-root {background: #ebf6ff !important; color: #000 !important; padding: 10px 15px !important;}
+
+.dropdownInfo {padding-left: 15px;}
+.dropdownInfo h4 {font-size: 13px; font-weight: 500; white-space: break-spaces; line-height: 25px; margin-top: 0px;}
+.dropdownInfo h4 b {font-weight: 600; margin-right: 5px;}
+.dropdownInfo p {font-size: 12px; font-weight: 500; margin-top: 0px;}
+
+.text-sky {color: #0858f7 !important}
