--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,10 @@ body {
 }
 
 ::-webkit-scrollbar {width: 5px !important; height: 5px !important}
-::-webkit-scrollbar-thumb {background: #CCC !important}
+::-webkit-scrollbar-thumb {background: #0858f7 !important}
+::-webkit-scrollbar-track {background: transparent !important}
+
+.btn-blue {background: #0858f7 !important; font-size: 14px !important; font-weight: 500; color: #FFF !important; text-transform: capitalize !important; border-radius: 5px !important;}
 
 header {width: 100%; height: 70px; background: #FFF;}
 header .logo {text-decoration: none;}
@@ -44,10 +47,12 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .dropdown_list .head {padding: 10px 0px;}
 .dropdown_list .head h4 {font-size: 17px; font-weight: 600;}
 .dropdown_list li.MuiButtonBase-root {background: #ebf6ff !important; color: #000 !important; padding: 10px 15px !important;}
+.dropdown_list li.MuiButtonBase-root:hover {background: #e2e8ed !important;}
+.dropdown_list .scroll {max-height: 300px; overflow-y: scroll; overflow-x: hidden;}
 
 .dropdownInfo {padding-left: 15px;}
 .dropdownInfo h4 {font-size: 13px; font-weight: 500; white-space: break-spaces; line-height: 25px; margin-top: 0px;}
-.dropdownInfo h4 b {font-weight: 600; margin-right: 5px;}
+.dropdownInfo h4 b {font-weight: 600; margin-right: 5px; margin-top: 0px; margin-bottom: 0px;}
 .dropdownInfo p {font-size: 12px; font-weight: 500; margin-top: 0px;}
 
 .text-sky {color: #0858f7 !important}
