--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 * {margin: 0px; padding: 0px;}
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", sans-serif !important;
   background: #ebe9e9;
 }
 
@@ -13,7 +13,7 @@ body {
 
 .btn-blue {background: #0858f7 !important; font-size: 14px !important; font-weight: 500; color: #FFF !important; text-transform: capitalize !important; border-radius: 5px !important;}
 
-header {width: 100%; height: 70px; background: #FFF;}
+header {width: 100%; height: 70px; background: #FFF; position: fixed; top: 0px; left: 0px; z-index: 1000;}
 header .logo {text-decoration: none;}
 header .logo img{width: 45px;}
 header .logo span{color: #292929; font-weight: 800; font-size: 24px;}
@@ -56,3 +56,14 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .dropdownInfo p {font-size: 12px; font-weight: 500; margin-top: 0px;}
 
 .text-sky {color: #0858f7 !important}
+
+.main .sidebarWrapper {width: 20%; flex: 0 0 20%; transition: all 0.3s ease-in-out;}
+.main .sidebarWrapper .sidebar {width: 20%; height: 100vh; position: fixed; top: 70px; left: 0px; background: #FFF;}
+.main .sidebarWrapper .sidebar ul {margin-bottom: 0px;}
+.main .sidebarWrapper .sidebar ul li {list-style: none;}
+.main .sidebarWrapper .sidebar ul li button {color: #000; text-align: left; justify-content: left; border-radius: 0px !important;
+  padding: 12px 15px !important; font-weight: 500 !important; font-family: "Open Sans", sans-serif !important;
+  align-items: center; text-transform: capitalize !important;}
+.main .sidebarWrapper .sidebar ul li button .icon {display: flex; align-items: center; justify-content: center; width: 25px; height: 25px; margin-right: 10px;}
+.main .sidebarWrapper .sidebar ul li button .icon svg {color: #000; opacity: 0.7; font-size: 22px;}
+.main .sidebarWrapper .sidebar ul li button .arrow {margin-left: auto; display: flex; align-items: center; justify-content: center; width: 25px; height: 25px;}
