--- a/src/App.css
+++ b/src/App.css
@@ -68,9 +68,23 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .main .sidebarWrapper .sidebar ul li {list-style: none;}
 .main .sidebarWrapper .sidebar ul li button {color: rgba(0, 0, 0, 0.7); text-align: left; justify-content: left; border-radius: 10px !important;
   padding: 12px 10px !important; font-weight: 500 !important; font-family: "Open Sans", sans-serif !important;
-  align-items: center; text-transform: capitalize !important;}
-  .main .sidebarWrapper .sidebar ul li button:hover {background: #f1f1f1 !important;}
-  .main .sidebarWrapper .sidebar ul li button * {color: rgba(0, 0, 0, 0.7);}
+  align-items: center; text-transform: capitalize !important; font-size: 15px !important;}
+.main .sidebarWrapper .sidebar ul li button:hover {background: #f1f1f1 !important;}
+.main .sidebarWrapper .sidebar ul li button.active {background: #f1f1f1 !important;}
+.main .sidebarWrapper .sidebar ul li button * {color: #5e5d72;}
 .main .sidebarWrapper .sidebar ul li button .icon {display: flex; align-items: center; justify-content: center; width: 25px; height: 25px; margin-right: 10px;}
 .main .sidebarWrapper .sidebar ul li button .icon svg {font-size: 22px;}
 .main .sidebarWrapper .sidebar ul li button .arrow {margin-left: auto; display: flex; align-items: center; justify-content: center; width: 25px; height: 25px;}
+
+.main .sidebarWrapper .sidebar ul .submenu {padding: 0px 45px; position: relative;}
+.main .sidebarWrapper .sidebar ul .submenu::before {content: ''; width: 1px; height: 95%; position: absolute; top: 0px; left: 25px; background: rgba(0, 0, 0, 0.2);}
+.main .sidebarWrapper .sidebar ul .submenu li {width: 100%; list-style: none;} /* Create left line */
+.main .sidebarWrapper .sidebar ul .submenu li a {color: #5e5d72 !important; text-decoration: none; display: block; padding: 6px 0px;
+  font-size: 16px; font-weight: 500; transition: all 0.3s;}
+.main .sidebarWrapper .sidebar ul .submenu li a:hover {color: #0858f7 !important;}
+
+.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .colapsed {height: 0px;}
+.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .colapsed .submenu {opacity: 0;}
+
+.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .colapse {height: auto;}
+.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .colapse .submenu {opacity: 1;}
