--- a/src/App.css
+++ b/src/App.css
@@ -76,15 +76,15 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .main .sidebarWrapper .sidebar ul li button .icon svg {font-size: 22px;}
 .main .sidebarWrapper .sidebar ul li button .arrow {margin-left: auto; display: flex; align-items: center; justify-content: center; width: 25px; height: 25px;}
 
-.main .sidebarWrapper .sidebar ul .submenu {padding: 0px 45px; position: relative;}
+.main .sidebarWrapper .sidebar ul .submenu {padding: 0px 45px; position: relative; transition: all 0.3s;}
 .main .sidebarWrapper .sidebar ul .submenu::before {content: ''; width: 1px; height: 95%; position: absolute; top: 0px; left: 25px; background: rgba(0, 0, 0, 0.2);}
 .main .sidebarWrapper .sidebar ul .submenu li {width: 100%; list-style: none;} /* Create left line */
 .main .sidebarWrapper .sidebar ul .submenu li a {color: #5e5d72 !important; text-decoration: none; display: block; padding: 6px 0px;
   font-size: 16px; font-weight: 500; transition: all 0.3s;}
 .main .sidebarWrapper .sidebar ul .submenu li a:hover {color: #0858f7 !important;}
 
-.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .colapsed {height: 0px;}
-.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .colapsed .submenu {opacity: 0;}
+.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper {transition: all 0.3s; height: 0px; overflow: hidden;}
+.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .collapsed .submenu {opacity: 0;}
 
-.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .colapse {height: auto;}
-.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .colapse .submenu {opacity: 1;}
+.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .collapse {height: auto; overflow: inherit;}
+.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .collapse .submenu {opacity: 1; height: auto;}
