--- a/src/App.css
+++ b/src/App.css
@@ -71,10 +71,11 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
   align-items: center; text-transform: capitalize !important; font-size: 15px !important;}
 .main .sidebarWrapper .sidebar ul li button:hover {background: #f1f1f1 !important;}
 .main .sidebarWrapper .sidebar ul li button.active {background: #f1f1f1 !important;}
+.main .sidebarWrapper .sidebar ul li button.active .arrow {transform: rotate(90deg);}
 .main .sidebarWrapper .sidebar ul li button * {color: #5e5d72;}
 .main .sidebarWrapper .sidebar ul li button .icon {display: flex; align-items: center; justify-content: center; width: 25px; height: 25px; margin-right: 10px;}
 .main .sidebarWrapper .sidebar ul li button .icon svg {font-size: 22px;}
-.main .sidebarWrapper .sidebar ul li button .arrow {margin-left: auto; display: flex; align-items: center; justify-content: center; width: 25px; height: 25px;}
+.main .sidebarWrapper .sidebar ul li button .arrow {margin-left: auto; display: flex; align-items: center; justify-content: center; width: 25px; height: 25px; transition: all 0.3s ease-in-out;}
 
 .main .sidebarWrapper .sidebar ul .submenu {padding: 0px 45px; position: relative; transition: all 0.3s;}
 .main .sidebarWrapper .sidebar ul .submenu::before {content: ''; width: 1px; height: 95%; position: absolute; top: 0px; left: 25px; background: rgba(0, 0, 0, 0.2);}
@@ -88,3 +89,11 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 
 .main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .collapse {height: auto; overflow: inherit;}
 .main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .collapse .submenu {opacity: 1; height: auto;}
+
+.logoutWrapper {padding: 0px 25px;}
+.logoutWrapper .logoutBox {width: 100%; height: 130px; padding: 25px; background: #bcd2fd; border-radius: 10px; display: flex; align-items: center;
+  justify-content: center; position: relative; overflow: hidden;}
+.logoutWrapper .logoutBox::before {content: ''; width: 70px; height: 70px; background: #0858f7; border-radius: 100%; position: absolute; top: -20px; right: -20px; opacity: 0.5;}
+.logoutWrapper .logoutBox::after {content: ''; width: 30px; height: 30px; background: #0858f7; border-radius: 100%; position: absolute; top: 20px; left: 10px; opacity: 0.5;}
+.logoutWrapper .logoutBox button {font-size: 14px !important; font-weight: 600 !important;}
+.logoutWrapper .logoutBox button svg {margin-right: 5px; font-size: 18px !important;}
