--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 #account-menu li {font-size: 14px !important; padding: 12px 15px !important;}
 #account-menu li svg {font-size: 20px !important;}
 
-#notifications .MuiPaper-elevation {right: 12% !important; left: auto !important; top: 8% !important; width: 300px !important;}
+#notifications .MuiPaper-elevation {right: 12% !important; left: auto !important; top: 8% !important; width: 300px !important; top: 70px !important;}
 
 .dropdown_list .head {padding: 10px 0px;}
 .dropdown_list .head h4 {font-size: 17px; font-weight: 600;}
@@ -84,8 +84,8 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
   font-size: 16px; font-weight: 500; transition: all 0.3s;}
 .main .sidebarWrapper .sidebar ul .submenu li a:hover {color: #0858f7 !important;}
 
-.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper {transition: all 0.3s; height: 0px; overflow: hidden;}
-.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .collapsed .submenu {opacity: 0;}
+.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper {transition: all 0.4s; height: 0px; overflow: hidden;}
+.main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .collapsed .submenu {opacity: 0; padding: 10px 0px;}
 
 .main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .collapse {height: auto; overflow: inherit;}
 .main .sidebarWrapper .sidebar ul .submenu .submenuWrapper .collapse .submenu {opacity: 1; height: auto;}
@@ -97,3 +97,11 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .logoutWrapper .logoutBox::after {content: ''; width: 30px; height: 30px; background: #0858f7; border-radius: 100%; position: absolute; top: 20px; left: 10px; opacity: 0.5;}
 .logoutWrapper .logoutBox button {font-size: 14px !important; font-weight: 600 !important;}
 .logoutWrapper .logoutBox button svg {margin-right: 5px; font-size: 18px !important;}
+
+.main .content {width: 80%; flex: 0 0 80%;}
+
+.right-content {padding: 90px 30px;}
+
+.dashboardBoxWrapper {gap: 15px; width: 100%; flex-wrap: wrap;}
+.dashboardBoxWrapper .dashboardBox {width: 45%; height: 200px; background: #CCC;}
+.dashboardBoxWrapperRow .box {width: 100%; height: 100%; background: #CCC;}
