--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,11 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 
 .right-content {padding: 90px 30px;}
 
-.dashboardBoxWrapper {gap: 15px; width: 100%; flex-wrap: wrap;}
-.dashboardBoxWrapper .dashboardBox {width: 45%; height: 200px; background: #CCC;}
+.dashboardBoxWrapper {gap: 20px; width: 100%; flex-wrap: wrap;}
+.dashboardBoxWrapper .dashboardBox {width: 48%; height: 170px; border-radius: 10px; overflow: hidden; padding: 20px;}
+.dashboardBoxWrapper .dashboardBox .col1 h4 {font-size: 16px; font-weight: 500;}
+.dashboardBoxWrapper .dashboardBox .col1 span {font-size: 40px !important; font-weight: bold; line-height: 45px;}
+.dashboardBoxWrapper .dashboardBox .icon {display: flex; align-items: center; justify-content: center; width: 50px; height: 50px; border-radius: 10px;
+background-image: linear-gradient(to bottom right, rgba(0,0,0,0.0), rgba(0,0,0,0.2));}
+.dashboardBoxWrapper .dashboardBox .icon svg {font-size: 36px; opacity: 0.3; color: #FFF;}
 .dashboardBoxWrapperRow .box {width: 100%; height: 100%; background: #CCC;}
