--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,7 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .logoutWrapper .logoutBox {width: 100%; height: 130px; padding: 25px; background: #bcd2fd; border-radius: 10px; display: flex; align-items: center;
   justify-content: center; position: relative; overflow: hidden;}
 .logoutWrapper .logoutBox::before {content: ''; width: 70px; height: 70px; background: #0858f7; border-radius: 100%; position: absolute; top: -20px; right: -20px; opacity: 0.5;}
-.logoutWrapper .logoutBox::after {content: ''; width: 30px; height: 30px; background: #0858f7; border-radius: 100%; position: absolute; top: 20px; left: 10px; opacity: 0.5;}
+.logoutWrapper .logoutBox::after {content: ''; width: 70px; height: 70px; background: #0858f7; border-radius: 100%; position: absolute; top: 20px; left: 10px; opacity: 0.5;}
 .logoutWrapper .logoutBox button {font-size: 14px !important; font-weight: 600 !important;}
 .logoutWrapper .logoutBox button svg {margin-right: 5px; font-size: 18px !important;}
 
@@ -103,10 +103,13 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .right-content {padding: 90px 30px;}
 
 .dashboardBoxWrapper {gap: 20px; width: 100%; flex-wrap: wrap;}
-.dashboardBoxWrapper .dashboardBox {width: 48%; height: 170px; border-radius: 10px; overflow: hidden; padding: 20px;}
+.dashboardBoxWrapper .dashboardBox {width: 48%; height: 170px; border-radius: 10px; overflow: hidden; padding: 20px;
+  display: flex; flex-direction: column; justify-content: space-around; text-align: left !important;}
 .dashboardBoxWrapper .dashboardBox .col1 h4 {font-size: 16px; font-weight: 500;}
-.dashboardBoxWrapper .dashboardBox .col1 span {font-size: 40px !important; font-weight: bold; line-height: 45px;}
+.dashboardBoxWrapper .dashboardBox .col1 span {font-size: 35px !important; font-weight: bold; line-height: 45px;}
 .dashboardBoxWrapper .dashboardBox .icon {display: flex; align-items: center; justify-content: center; width: 50px; height: 50px; border-radius: 10px;
-background-image: linear-gradient(to bottom right, rgba(0,0,0,0.0), rgba(0,0,0,0.2));}
-.dashboardBoxWrapper .dashboardBox .icon svg {font-size: 36px; opacity: 0.3; color: #FFF;}
+  background-image: linear-gradient(to bottom right, rgba(0,0,0,0.0), rgba(0,0,0,0.2));}
+.dashboardBoxWrapper .dashboardBox .icon svg {font-size: 36px; opacity: 0.4; color: #FFF;}
+.dashboardBoxWrapper .dashboardBox .toggleIcon {font-size: 22px; color: rgba(0,0,0,0.5); cursor: pointer;
+  min-width: 40px !important; width: 40px !important; height: 40px !important; border-radius: 50% !important;}
 .dashboardBoxWrapperRow .box {width: 100%; height: 100%; background: #CCC;}
