--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 
 .dashboardBoxWrapper {gap: 20px; width: 100%; flex-wrap: wrap;}
 .dashboardBoxWrapper .dashboardBox {width: 48%; height: 170px; border-radius: 10px; overflow: hidden; padding: 20px;
-  display: flex; flex-direction: column; justify-content: space-around; text-align: left !important;}
+  display: flex; flex-direction: column; justify-content: space-around; text-align: left !important; color: #FFF}
 .dashboardBoxWrapper .dashboardBox .col1 h4 {font-size: 16px; font-weight: 500;}
 .dashboardBoxWrapper .dashboardBox .col1 span {font-size: 35px !important; font-weight: bold; line-height: 45px;}
 .dashboardBoxWrapper .dashboardBox .icon {display: flex; align-items: center; justify-content: center; width: 50px; height: 50px; border-radius: 10px;
@@ -112,4 +112,8 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .dashboardBoxWrapper .dashboardBox .icon svg {font-size: 36px; opacity: 0.4; color: #FFF;}
 .dashboardBoxWrapper .dashboardBox .toggleIcon {font-size: 22px; color: rgba(0,0,0,0.5); cursor: pointer;
   min-width: 40px !important; width: 40px !important; height: 40px !important; border-radius: 50% !important;}
+
+.dashboardBoxWrapper .dashboardBox .chart {opacity: 0.1; position: absolute; bottom: 20px; left: 20px;}
+.dashboardBoxWrapper .dashboardBox .chart svg {font-size: 110px; color: #000;}
+.dashboardBoxWrapper .dashboardBox .bottomEle {position: relative; top: 25px}
 .dashboardBoxWrapperRow .box {width: 100%; height: 100%; background: #CCC;}
