--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,5 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .dashboardBoxWrapper .dashboardBox .chart svg {font-size: 110px; color: #000;}
 .dashboardBoxWrapper .dashboardBox .bottomEle {position: relative; top: 25px}
 .dashboardBoxWrapperRow .box {width: 100%; height: 100%; background: #CCC;}
+
+.cardFilters .col-md-3 h4 {font-size: 16px; font-weight: 600; text-transform: capitalize; color: #403e57;}
