Create event onClick sidebar appear

--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,8 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .cardFilters .col-md-3 h4 {font-size: 16px; font-weight: 600; text-transform: capitalize; color: #403e57;}
 
 h1, h2, h3, h4, h5, h6, p {color: #403e57;}
+.table-responsive::-webkit-scrollbar-thumb {background: #CCC}
+
 .table .thead-dark th {background-color: #1866ee !important; border-color: rgba(255, 255, 255, 0.1) !important; font-size: 13px !important;}
 .table tbody td {font-size: 14px !important; color: #2f2d3e; font-weight: 500;}
 .table tbody .actions button {min-width: 32px !important; width: 32px !important; height: 32px !important; margin: 0px 3px !important;}
@@ -161,7 +163,8 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 
 .table.v-align td .productBox {width: 250px;}
 
-.tableFooter {padding-bottom: 20px;}
-.tableFooter .pagination {margin-left: 20px;}
+.tableFooter {padding-bottom: 14px;}
+.tableFooter .pagination {margin-left: auto;}
+.tableFooter p {font-size: 13px; font-weight: 500; margin-bottom: 0px;}
 
 .css-1to7aaw-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {background-color: #0858f7 !important;}
