--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ body {
 
 .btn-lg {padding:5px 25px !important;}
 
+.full {max-width: 100% !important; flex: 0 0 100% !important; width: 100% !important;}
+
 .btn-round {border-radius: 30px !important;}
 
 header {width: 100%; height: 70px; background: rgba(255, 255, 255, 0.8); position: fixed; top: 0px; left: 0px; z-index: 1000; -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px);}
