Design icon input

--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,16 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 
 .loginSection .loginBox {width: 400px; height: auto; margin: auto;}
 .loginSection .loginBox .wrapper {width: 100%; height: 300px; background: #f0f0f0; position: relative; z-index: 100;}
+.loginSection .loginBox .wrapper .form-control {background: #FFF !important; box-shadow: none !important;
+  outline: none !important; border-radius: 5px !important; font-size: 14px; font-weight: 600; height: 45px; padding-left: 40px;}
+.loginSection .loginBox .wrapper .form-control.focus .icon svg {color: #0858f7 !important;}
+.loginSection .loginBox .wrapper .form-control:focus {border: 1px solid #0858f7 !important;}
+
+.loginSection .loginBox .wrapper .form-group .icon {position: absolute; top: 2px; left: 10px; z-index: 100; font-size: 25px;}
+.loginSection .loginBox .wrapper .form-group .icon svg {opacity: 0.8;}
+
+
+
 
 /*
 .form .form-group {margin-bottom: 15px;}
