--- a/src/App.css
+++ b/src/App.css
@@ -185,16 +185,17 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 .loginPatern {width: 100%; height: 100%; opacity: 0.08; position: fixed; top: 0px; left: 0px; z-index: 99; pointer-events: none;}
 
 .loginSection .loginBox {width: 400px; height: auto; margin: auto;}
-.loginSection .loginBox .wrapper {width: 100%; height: 300px; background: #f0f0f0; position: relative; z-index: 100;}
+.loginSection .loginBox .wrapper {width: 100%; height: 300px; background: #f0f0f0; position: relative; z-index: 100; padding: 35px;}
 .loginSection .loginBox .wrapper .form-control {background: #FFF !important; box-shadow: none !important;
   outline: none !important; border-radius: 5px !important; font-size: 14px; font-weight: 600; height: 45px; padding-left: 40px;}
-.loginSection .loginBox .wrapper .form-control.focus .icon svg {color: #0858f7 !important;}
+.loginSection .loginBox .wrapper .form-group.focus .icon svg {color: #0858f7 !important;}
 .loginSection .loginBox .wrapper .form-control:focus {border: 1px solid #0858f7 !important;}
 
 .loginSection .loginBox .wrapper .form-group .icon {position: absolute; top: 2px; left: 10px; z-index: 100; font-size: 25px;}
 .loginSection .loginBox .wrapper .form-group .icon svg {opacity: 0.8;}
 
-
+.toggleShowPassword {position: absolute; top: 10px; right: 8px; cursor: pointer;}
+.toggleShowPassword svg {font-size: 22px;}
 
 
 /*
