--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,16 @@ body {
 ::-webkit-scrollbar-thumb {background: #0858f7 !important}
 ::-webkit-scrollbar-track {background: transparent !important}
 
-.btn-blue {background: #0858f7 !important; font-size: 14px !important; font-weight: 500; color: #FFF !important; text-transform: capitalize !important; border-radius: 5px !important;}
+.btn-blue {background: #0858f7 !important; font-size: 14px !important; font-weight: 500; color: #FFF !important;
+  text-transform: capitalize !important; border-radius: 8px !important;}
 
 .btn-lg {padding:5px 25px !important;}
+.btn-big {padding:10px 25px !important; font-size: 16px !important;}
 
 .full {max-width: 100% !important; flex: 0 0 100% !important; width: 100% !important;}
+
+.link {color: #5e5d72; font-weight: 600;}
+.link:hover {color: #0858f7; text-decoration: none;}
 
 .btn-round {border-radius: 30px !important;}
 
@@ -185,7 +190,7 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 .loginPatern {width: 100%; height: 100%; opacity: 0.08; position: fixed; top: 0px; left: 0px; z-index: 99; pointer-events: none;}
 
 .loginSection .loginBox {width: 400px; height: auto; margin: auto;}
-.loginSection .loginBox .wrapper {width: 100%; height: 300px; background: #f0f0f0; position: relative; z-index: 100; padding: 35px;}
+.loginSection .loginBox .wrapper {width: 100%; height: auto; background: #f0f0f0; position: relative; z-index: 100; padding: 35px;}
 .loginSection .loginBox .wrapper .form-control {background: #FFF !important; box-shadow: none !important;
   outline: none !important; border-radius: 5px !important; font-size: 14px; font-weight: 600; height: 45px; padding-left: 40px;}
 .loginSection .loginBox .wrapper .form-group.focus .icon svg {color: #0858f7 !important;}
@@ -193,6 +198,11 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 
 .loginSection .loginBox .wrapper .form-group .icon {position: absolute; top: 2px; left: 10px; z-index: 100; font-size: 25px;}
 .loginSection .loginBox .wrapper .form-group .icon svg {opacity: 0.8;}
+
+.loginSection .loginBox .wrapper .link {font-size: 14px;}
+.loginSection .loginBox .wrapper .or span.line {display: block; width: 35%; height: 1px; background: rgba(0,0,0,0.2);}
+.loginSection .loginBox .wrapper .or span.txt {display: flex; align-items: center; justify-content: center; font-size: 16px; font-weight: 600;
+  width: 40px; height: 40px; border: 1px solid rgba(0,0,0,0.2); border-radius: 50%;}
 
 .toggleShowPassword {position: absolute; top: 10px; right: 8px; cursor: pointer;}
 .toggleShowPassword svg {font-size: 22px;}
