--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ body {
 
 .link {color: #5e5d72; font-weight: 600;}
 .link:hover {color: #0858f7; text-decoration: none;}
+.link:color {color: #0858f7; text-decoration: none;}
 
 .btn-round {border-radius: 30px !important;}
 
@@ -187,7 +188,7 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 .css-1to7aaw-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {background-color: #0858f7 !important;}
 
 .loginSection {width: 100%; height: 100vh; padding: 35px 25px; background: #FFF;}
-.loginPatern {width: 100%; height: 100%; opacity: 0.08; position: fixed; top: 0px; left: 0px; z-index: 99; pointer-events: none;}
+.loginPatern {width: 100%; height: 100%; opacity: 0.1; position: fixed; top: 0px; left: 0px; z-index: 99; pointer-events: none;}
 
 .loginSection .loginBox {width: 400px; height: auto; margin: auto;}
 .loginSection .loginBox .wrapper {width: 100%; height: auto; background: #f0f0f0; position: relative; z-index: 100; padding: 35px;}
@@ -196,6 +197,7 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 .loginSection .loginBox .wrapper .form-group.focus .icon svg {color: #0858f7 !important;}
 .loginSection .loginBox .wrapper .form-control:focus {border: 1px solid #0858f7 !important;}
 
+.loginSection .loginBox .wrapper .form-group {margin-bottom: 18px;}
 .loginSection .loginBox .wrapper .form-group .icon {position: absolute; top: 2px; left: 10px; z-index: 100; font-size: 25px;}
 .loginSection .loginBox .wrapper .form-group .icon svg {opacity: 0.8;}
 
@@ -204,8 +206,10 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 .loginSection .loginBox .wrapper .or span.txt {display: flex; align-items: center; justify-content: center; font-size: 16px; font-weight: 600;
   width: 40px; height: 40px; border: 1px solid rgba(0,0,0,0.2); border-radius: 50%;}
 
+.loginWithGoogle {text-transform: capitalize !important; font-weight: bold !important;}
+
 .toggleShowPassword {position: absolute; top: 10px; right: 8px; cursor: pointer;}
-.toggleShowPassword svg {font-size: 22px;}
+.toggleShowPassword svg {font-size: 22px; color: #5e5d72}
 
 
 /*
