--- a/src/App.css
+++ b/src/App.css
@@ -211,6 +211,9 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 .toggleShowPassword {position: absolute; top: 10px; right: 8px; cursor: pointer;}
 .toggleShowPassword svg {font-size: 22px; color: #5e5d72}
 
+.signUpSection {background: #f1f1f1 !important; padding: 0px 0px;}
+.signUpSection .loginBox {background: #e4e4e4 !important; position: relative; z-index: 100; width: 100% !important; padding: 25px 5px !important;}
+.signUpSection .loginBox .wrapper {border: 0px !important; background: transparent !important; padding-top: 10px !important;}
 
 /*
 .form .form-group {margin-bottom: 15px;}
@@ -222,4 +225,4 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 */
 
 /* Box Table Tennis Detail */
-.tableTennisBox {text-align: center;}
+.tableTennisBox {text-align: center; padding: 35px 0px;}
