--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,14 @@ body {
 ::-webkit-scrollbar-thumb {background: #0858f7 !important}
 ::-webkit-scrollbar-track {background: transparent !important}
 
+h1,h2,h3,h4,h5,h6,p {color: #403e57}
+
 .btn-blue {background: #0858f7 !important; font-size: 14px !important; font-weight: 500; color: #FFF !important;
   text-transform: capitalize !important; border-radius: 8px !important;}
 
 .btn-lg {padding:5px 25px !important;}
 .btn-big {padding:10px 25px !important; font-size: 16px !important;}
+.btn-big svg {font-size: 25px !important; margin-left: 7px;}
 
 .full {max-width: 100% !important; flex: 0 0 100% !important; width: 100% !important;}
 
@@ -215,6 +218,10 @@ table td .info h6 {overflow: hidden; text-overflow: ellipsis; white-space: nowra
 .signUpSection .loginBox {background: #e4e4e4 !important; position: relative; z-index: 100;
   width: 100% !important; padding: 163px 25px !important;}
 .signUpSection .loginBox .wrapper {border: 0px !important; background: transparent !important; padding-top: 10px !important;}
+
+.signUpSection .part1 {padding-left: 50px; padding-right: 50px;}
+.signUpSection .part1 h1 {font-size: 50px; font-weight: 800;}
+.signUpSection .part1 p {font-size: 18px; font-weight: 500;}
 
 /*
 .form .form-group {margin-bottom: 15px;}
