--- a/src/App.css
+++ b/src/App.css
@@ -28,13 +28,20 @@ h1,h2,h3,h4,h5,h6,p {color: #403e57}
 
 .btn-round {border-radius: 30px !important;}
 
+body.dark header {background: #112143 !important;}
+
 header {width: 100%; height: 70px; background: rgba(255, 255, 255, 0.8); position: fixed; top: 0px; left: 0px; z-index: 1000; -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px);}
 header .logo {text-decoration: none;}
 header .logo img{width: 45px;}
 header .logo span{color: #292929; font-weight: 800; font-size: 24px;}
 
+body.dark header .logo span{color: #FFF !important; opacity: 0.8;}
+
 header button.rounded-circle {min-width: 40px !important; width: 40px !important; height: 40px !important; background: #f0f5ff !important; color: #0858f7}
 header button.rounded-circle svg {color: #292929; font-size: 28px !important;}
+
+body.dark header button.rounded-circle {background: #12254e !important;}
+body.dark header button.rounded-circle svg {color: #FFF !important;}
 
 header .part2 {padding-left: 60px;}
 
@@ -44,6 +51,9 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .searchBox input {background: transparent; border: 0px; outline: none; padding-left: 0px; font-size: 14px; color: #292929}
 .searchBox input::-webkit-input-placeholder {color: rgba(0, 0, 0, 0.6)}
 .searchBox svg {font-size: 18px; color: #292929}
+
+body.dark .searchBox {background: #12254e !important;}
+body.dark .searchBox input, body.dark .searchBox input::-webkit-input-placeholder, body.dark .searchBox svg {color: rgba(255, 255, 255, 0.7);}
 
 .myAcc {text-align: left !important; color: #0858f7 !important; text-transform: capitalize !important;}
 .userImg {display: flex; align-items: center; justify-content: center;
@@ -56,6 +66,10 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 .myAcc .userInfo h4 {font-size: 15px; font-weight: 600; margin-bottom: 0px; color: #292929;}
 .myAcc .userInfo p {margin-top: 0px; font-size: 12px; color: #000; opacity: 0.7;}
 
+body.dark .myAcc .userInfo *{color: rgba(255,255,255,0.8) !important;}
+body.dark .MuiPaper-elevation {background-color: #12254e !important;}
+body.dark .MuiPaper-elevation li *, body.dark .MuiPaper-elevation li {color: rgba(255,255,255,0.8) !important;}
+
 #account-menu li {font-size: 14px !important; padding: 12px 15px !important;}
 #account-menu li svg {font-size: 20px !important;}
 
@@ -63,9 +77,12 @@ header button.rounded-circle:hover svg {color: #0858f7 !important; transition: a
 
 .dropdown_list .head {padding: 10px 0px;}
 .dropdown_list .head h4 {font-size: 17px; font-weight: 600;}
+body.dark .dropdown_list .head h4 {color: rgba(255, 255, 255, 0.9) !important;}
 .dropdown_list li.MuiButtonBase-root {background: #ebf6ff !important; color: #000 !important; padding: 10px 15px !important;}
 .dropdown_list li.MuiButtonBase-root:hover {background: #e2e8ed !important;}
 .dropdown_list .scroll {max-height: 300px; overflow-y: scroll; overflow-x: hidden;}
+
+body.dark .dropdown_list li.MuiButtonBase-root {background-color: #12254e !important; background: #12254e !important;}
 
 .dropdownInfo {padding-left: 15px;}
 .dropdownInfo h4 {font-size: 13px; font-weight: 500; white-space: break-spaces; line-height: 25px; margin-top: 0px;}
