--- a/src/pages/TableTennis/components/PopupAddStyle.css
+++ b/src/pages/TableTennis/components/PopupAddStyle.css
@@ -22,6 +22,7 @@
 .overlay {
     background: rgba(49,49,49,0.8);
 }
+
 .modal-content {
     position: absolute;
     top: 40%;
@@ -34,10 +35,10 @@
     max-width: 600px;
     min-width: 300px;
 }
-
+ */
 .close-modal {
     position: absolute;
     top: 10px;
     right: 10px;
     padding: 5px 7px;
-} */
+}
