Change Table Tennis to Blade

--- a/src/App.css
+++ b/src/App.css
@@ -294,5 +294,5 @@ body.dark .css-1to7aaw-MuiButtonBase-root-MuiPaginationItem-root {color: rgba(25
 
 */
 
-/* Box Table Tennis Detail */
-.tableTennisBox {text-align: center; padding: 35px 0px;}
+/* Box Blade Detail */
+.bladeBox {text-align: center; padding: 35px 0px;}
