--- a/src/pages/Blade/components/PopupAddStyle.css
+++ b/src/pages/Blade/components/PopupAddStyle.css
@@ -37,7 +37,7 @@
 }
  */
 .close-modal {
-    position: absolute;
+    /* position: absolute; */
     top: 10px;
     right: 10px;
     padding: 5px 7px;
